--- a/style.css
+++ b/style.css
@@ -9,6 +9,9 @@ canvas{
     position: absolute;
     top: 0;
     left: 0;
+    display: flex;
+    justify-content: center;
+    font-family:'Montserrat', sans-serif;
 }
 
 body{
